--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "bin": "dist/main.js",
   "license": "MIT",
   "homepage": "https://github.com/kklas/anchor-client-gen",
+  "type": "module",
   "scripts": {
     "watch": "tsc --project tsconfig.build.json --watch",
     "build": "yarn build:cli && yarn build:test-fixture && yarn generate-examples",
-    "build:cli": "rimraf ./dist && tsc --project tsconfig.build.json",
+    "build:cli": "rimraf ./dist && tsup src/main.ts --format esm",
     "build:test-fixture": "yarn build:example-program && yarn build:test-fixture:copy-idl && yarn build:test-fixture:generate-exp",
     "build:test-fixture:copy-idl": "cp tests/example-program/target/idl/example_program.json tests/example-program-gen/idl.json",
     "build:test-fixture:generate-exp": "rimraf tests/example-program-gen/exp && node ./dist/main.js tests/example-program-gen/idl.json tests/example-program-gen/exp --program-id 3rTQ3R4B2PxZrAyx7EUefySPgZY8RhJf16cZajbmrzp8",
@@ -16,8 +17,8 @@
     "generate-examples": "rimraf ./examples/**/generated-client && yarn generate-examples:basic-2 && yarn generate-examples:tic-tac-toe",
     "generate-examples:basic-2": "node ./dist/main.js examples/basic-2/idl.json examples/basic-2/generated-client --program-id Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS",
     "generate-examples:tic-tac-toe": "node ./dist/main.js examples/tic-tac-toe/idl.json examples/tic-tac-toe/generated-client --program-id Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS",
-    "test": "yarn test:prepare && start-server-and-test test:start-validator http://127.0.0.1:8899/health 'jest test --detectOpenHandles --watch'",
-    "test:no-watch": "yarn test:prepare && start-server-and-test test:start-validator http://127.0.0.1:8899/health 'jest test --detectOpenHandles'",
+    "test": "yarn test:prepare && start-server-and-test test:start-validator http://127.0.0.1:8899/health 'vitest --watch'",
+    "test:no-watch": "yarn test:prepare && start-server-and-test test:start-validator http://127.0.0.1:8899/health 'vitest'",
     "test:prepare": "yarn build:example-program && yarn test:generate-test-client",
     "test:generate-test-client": "rimraf tests/example-program-gen/act && node dist/main.js tests/example-program/target/idl/example_program.json tests/example-program-gen/act --program-id 3rTQ3R4B2PxZrAyx7EUefySPgZY8RhJf16cZajbmrzp8",
     "test:start-validator": "solana-test-validator --ledger tests/.test-ledger --bpf-program 3rTQ3R4B2PxZrAyx7EUefySPgZY8RhJf16cZajbmrzp8 tests/example-program/target/deploy/example_program.so --quiet --reset",
@@ -26,25 +27,25 @@
     "check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@coral-xyz/anchor-cli": "0.27.0",
+    "@coral-xyz/anchor-cli": "0.28.0",
     "@types/bn.js": "^5.1.1",
     "@types/eslint": "^8.40.1",
-    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "dir-compare": "^4.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
     "rimraf": "^5.0.1",
     "start-server-and-test": "^2.0.0",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.1.3"
+    "tsup": "^6.7.0",
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.0"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.27.0",
-    "@coral-xyz/borsh": "^0.27.0",
+    "@coral-xyz/anchor": "0.28.0",
+    "@coral-xyz/borsh": "^0.28.0",
     "@solana/web3.js": "^1.77.3",
     "bn.js": "^5.2.1",
     "camelcase": "^7.0.1",
